systems/epmbp/kube/manifests/sandbox.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: sandbox
