systems/epmbp/kube/manifests/secretstore.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: secretstore
