systems/epmbp/kube/manifests/gateway.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
spec:
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.106.200
  gatewayClassName: envoygateway
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: Same
    - protocol: HTTPS
      port: 443
      name: https
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcarddev
            namespace: certificate
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-otel
  namespace: gateway
spec:
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.106.201
  gatewayClassName: envoygateway-otel
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: Same
    - protocol: HTTPS
      port: 443
      name: https
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcarddev
            namespace: certificate
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
spec:
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.106.202
  gatewayClassName: envoygateway
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: Same
    - protocol: HTTPS
      port: 443
      name: https
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcarddev
            namespace: certificate
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-otel
  namespace: gateway
spec:
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.106.203
  gatewayClassName: envoygateway-otel
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: Same
    - protocol: HTTPS
      port: 443
      name: https
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcarddev
            namespace: certificate
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpsredirect-internal
  namespace: gateway
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
    - name: internal-otel
      namespace: gateway
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
