systems/epmbp/kube/manifests/mcp.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: mcp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-k8s
  namespace: mcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp-k8s
  template:
    metadata:
      labels:
        app: mcp-k8s
    spec:
      serviceAccountName: mcp-k8s
      containers:
        - name: mcp
          image: ghcr.io/sparfenyuk/mcp-proxy:v0.11.0
          command:
            - "sh"
            - "-c"
          args:
            - "apk add --no-cache nodejs npm && catatonit -- mcp-proxy --host=0.0.0.0 --port=8000 --pass-environment -- npx -y kubernetes-mcp-server@latest --cluster-provider in-cluster"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: mcp-k8s
  namespace: mcp
spec:
  type: ClusterIP
  selector:
    app: mcp-k8s
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-k8s
  namespace: mcp
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "mcp-k8s.work.bitey.life"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mcp-k8s
          port: 8000
