systems/epmbp/kube/manifests/observability.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: observability
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "grafana.dev.bitey.life"
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
